--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "package": "ncc build --source-map",
     "test": "jest --config jest.config.js",
     "contract-test": "jest --config jest.config.e2e.js --forceExit --detectOpenHandles",
-    "all": "npm run format && npm run lint && npm run build && npm run package && npm test"
+    "all": "npm run format && npm run lint && npm run build && npm run package",
+    "postversion": "git add * && git commit -m 'updated CHANGELOG and version from semantic' && git push && git push origin && git push origin --tags"
   },
   "repository": {
     "type": "git",
@@ -42,6 +43,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^4.7.4"
   },
   "dependencies": {
