--- a/package.json
+++ b/package.json
@@ -27,37 +27,38 @@
   },
   "homepage": "https://github.com/blackduck-inc/black-duck-security-scan#readme",
   "devDependencies": {
-    "@types/dom-parser": "^0.1.1",
-    "@types/jest": "^29.1.0",
-    "@types/node": "^16.11.6",
-    "@types/semver": "^7.5.6",
-    "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
-    "@vercel/ncc": "^0.31.1",
-    "eslint": "^8.1.0",
-    "eslint-plugin-github": "^4.3.5",
-    "eslint-plugin-jest": "^26.0.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "jest": "^29.7.0",
-    "prettier": "^3.3.3",
-    "ts-jest": "^29.1.0",
-    "typescript": "^4.7.4"
+    "@types/dom-parser": "0.1.4",
+    "@types/jest": "29.5.12",
+    "@types/node": "16.18.108",
+    "@types/semver": "7.5.8",
+    "@types/uuid": "9.0.8",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
+    "@vercel/ncc": "0.31.1",
+    "eslint": "8.57.0",
+    "eslint-plugin-github": "4.10.2",
+    "eslint-plugin-jest": "26.9.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "jest": "29.7.0",
+    "prettier": "3.3.3",
+    "ts-jest": "29.2.5",
+    "typescript": "4.9.5"
   },
   "dependencies": {
-    "@actions/core": "^1.9.0",
-    "@actions/exec": "^1.1.1",
-    "@actions/github": "^5.0.3",
-    "@actions/io": "^1.1.2",
-    "@actions/tool-cache": "^2.0.1",
-    "@types/unzipper": "^0.10.5",
-    "actions-artifact-v1": "npm:@actions/artifact@^1.1.0",
-    "actions-artifact-v2": "npm:@actions/artifact@^2.1.8",
-    "dom-parser": "^0.1.6",
-    "nock": "^13.3.3",
-    "path": "^0.12.7",
-    "typed-rest-client": "^1.8.9",
-    "unzipper": "^0.10.11",
-    "uuid": "^8.3.2"
+    "@actions/core": "1.10.1",
+    "@actions/exec": "1.1.1",
+    "@actions/github": "5.1.1",
+    "@actions/io": "1.1.3",
+    "@actions/tool-cache": "2.0.1",
+    "@types/unzipper": "0.10.10",
+    "actions-artifact-v1": "npm:@actions/artifact@1.1.0",
+    "actions-artifact-v2": "npm:@actions/artifact@2.1.8",
+    "dom-parser": "0.1.6",
+    "nock": "13.5.5",
+    "path": "0.12.7",
+    "typed-rest-client": "1.8.11",
+    "unzipper": "0.10.14",
+    "uuid": "8.3.2"
   }
 }
+ 
